helm-chart/longhorn/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend
  namespace: longhorn-system
spec:
  routes:
    - kind: Rule
      match: Host(`longhorn.home-lab.begoodguys.ovh`)
      middlewares:
        - name: longhornauth
      services:
        - kind: Service
          name: longhorn-frontend
          port: 80
  tls:
    secretName: tls-longhorn-http
